frontends/web/src/components/toast/Toast.css
.toast {
    position: fixed;
    display: block;
    bottom: calc(var(--item-height-large) + var(--space-half));
    right: 50%;
    transform: translate(50%, 120%);
    max-width: calc(100% - (var(--guide-width) + var(--sidebar-width) + var(--spacing-large)));
    min-width: 180px;
    min-height: 20px;
    border-radius: 2px;
    padding: var(--space-half);
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
    transition: transform ease-out 0.2s;
}

.active {
    transform: translate(50%, 0%);
}

.active.shifted {
    right: calc(var(--spacing-default) + 350px);
}

.info {
    background-color: var(--color-darkblue);
}

.success {
    background-color: var(--color-success);
}

.warning {
    background-color: var(--color-softred);
}

.toast p {
    margin: 0;
    color: var(--color-white);
}

@media (max-width: 1080px) {
    .toast {
        right: 0;
    }
}

@media (max-width: 768px) {
    .toast {
        top: calc(var(--header-height) + var(--space-quarter));
        max-width: calc(100% - var(--space-default));
        margin-right: var(--space-half);
    }
}

